# flipper-yt-remote

./: Cargo.toml  build.rs  rust-toolchain.toml
src/: bt.rs  gui.rs  icon.icon  icons.rs  lib.rs  main.rs
src/bt/: mod.rs  sys.rs
src/gui/: canvas.rs  mod.rs  view_port.rs
