cargo-features = ["different-binary-name"]

[package]
name = "flipper-yt-remote"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
bench = false
test = false

[[bin]]
name = "flipper-yt-remote"
filename = "yt-remote.fap"
bench = false
test = false

[dependencies]
flipperzero = { git = "https://github.com/Shadlock0133/flipperzero.git", features = ["alloc"] }
flipperzero-sys = { git = "https://github.com/Shadlock0133/flipperzero.git" }
flipperzero-rt = { git = "https://github.com/Shadlock0133/flipperzero.git" }
flipperzero-alloc = { git = "https://github.com/Shadlock0133/flipperzero.git" }
bitflags = "2.8.0"

[build-dependencies]
# bindgen = "0.71.1"
cc = "1.2.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[patch."https://github.com/Shadlock0133/flipperzero.git"]
flipperzero = { path = "../flipperzero/crates/flipperzero" }
flipperzero-sys = { path = "../flipperzero/crates/sys" }
flipperzero-rt = { path = "../flipperzero/crates/rt" }
flipperzero-alloc = { path = "../flipperzero/crates/alloc" }
